# prm_instruments

./: .env.template  .gitignore  Dockerfile  Dockerfile1  Makefile  README.md  docker-compose.yml  help.txt  pyproject.toml  requirements.txt
.github/workflows/: main.yml  main1.yml
docker/: app.sh
fastapi-application/: main.py  test1.py
fastapi-application/core/: config.py
fastapi-application/others/: test1.py
server/: main.py
server/core/: config.py
src/: .env.template  Makefile  alembic.ini  config.py  database.py  exceptions.py  help.txt  loggind_config.py  main.py  requirements.txt
src/alembic/: env.py
src/api/: __init__.py
src/api_v1/: __init__.py
src/auth/: __init__.py  app.py  auth.py  database.py  manager.py  models.py  schemas.py  test.py
src/auth_jwt/: api.py  cookies.py  helpers.py  jwt_auth.py  jwt_utils.py  schemas.py
src/companies/: __init__.py  cruds.py  models.py  router_v1.py  schemas.py
src/crud/: companies.py  services.py  users.py
src/models/: __init__.py  base.py  company.py  service.py  user.py
src/osnastka/: __init__.py  cruds.py  models.py  router_v1.py  schemas.py  test_cruds.py
src/others/: help.txt  redis_rabbit.py  test1.py
src/project_services/: __init__.py  base.py  cors.py  llifespan.py  redis_tools.py
src/repositories/: services.py
src/schemas/: company.py  service.py  user.py
src/services/: 123.py  __init__.py  cruds.py  models.py  router_v1.py  schemas.py
src/templates/: base.html  create.html  filters.html  index.html  index_1.html  index_v1.html  update.html
src/tests/: conftest.py  test_3.py  test_drills2.py
src/tools/: __init__.py  drill.py  dsa.py  schemas_type.py
src/users/: __init__.py  cruds.py  helpers.py  models.py  router_v1.py  schemas.py
src/utils/: __init__.py  repository.py  (+3 more)
(+109 files in other folders)
