[tool.poetry]
name = "fastapi-1"
version = "0.1.0"
description = ""
authors = ["gas <pankot222@gmail.com>"]
readme = "README.md"
#package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
pydantic = {extras = ["email"], version = "^2.8.0"}
pydantic-settings = "^2.2.1"
orjson = "3.10.5"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
alembic = "^1.13.2"
gunicorn = "^22.0.0"
fastapi-pagination = "^0.12.26"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
